Add color to player, prepare canvas on play

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>cavez.io</title>
-</head>
-<body>
-  <canvas id="game-canvas"></canvas>
-  <div id="play-menu" class="hidden">
-    <input type="text" id="username-input" placeholder="Username" />
-    <button id="play-button">PLAY</button>
-  </div>
-</body>
+  <head>
+    <title>cavez.io</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+  </head>
+  <body>
+    <canvas id="game-canvas"></canvas>
+    <div id="play-menu" class="hidden">
+      <input type="text" id="username-input" placeholder="Username" />
+      <button id="play-button">PLAY</button>
+    </div>
+  </body>
 </html>
